--- a/app/src/main/res/layout/qr_scanner_fragment.xml
+++ b/app/src/main/res/layout/qr_scanner_fragment.xml
@@ -1,103 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/activity_test"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_color">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_test"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_color">
 
     <androidx.cardview.widget.CardView
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:cardCornerRadius="16dp"
-            style="@style/card">
+        android:id="@+id/cardView"
+        style="@style/card"
+        app:cardCornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="@string/welcome_to"
-                      android:id="@+id/textView3"
-                      app:layout_constraintTop_toTopOf="parent"
-                      app:layout_constraintEnd_toEndOf="parent"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginEnd="8dp"
-                      android:textColor="@color/medium_gray"
-                      android:textSize="30sp"/>
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    android:id="@+id/layout_vendor_data"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:id="@+id/iv_vendor_logo"
-                        app:civ_border_width="2dp"
-                        app:civ_border_color="@color/light_gray"
-                    android:src="@drawable/avatar_placeholder" />
+                android:id="@+id/layout_store_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/welcome_to"
+                    android:textColor="@color/medium_gray"
+                    android:textSize="30sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_vendor_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/iv_vendor_logo"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:src="@drawable/avatar_placeholder"
+                        app:civ_border_color="@color/light_gray"
+                        app:civ_border_width="2dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
                         android:id="@+id/tv_vendor_name"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="8dp"
                         android:text="kfslfljakalf"
                         android:textColor="@color/lightBlue"
-                        android:layout_marginStart="16dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/tv_vendor_type"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/iv_vendor_logo"
                         app:layout_constraintTop_toTopOf="@id/iv_vendor_logo"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginEnd="8dp"
-                        app:layout_constraintWidth_percent="0.7"
-                        android:textStyle="bold"
-                        android:textSize="18sp"
-                        app:layout_constraintBottom_toTopOf="@+id/tv_vendor_type"/>
+                        app:layout_constraintWidth_percent="0.7" />
 
-                <TextView
+                    <TextView
                         android:id="@+id/tv_vendor_type"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:text="Restaurant"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_vendor_name"
-                        app:layout_constraintStart_toStartOf="@+id/tv_vendor_name"
                         app:layout_constraintBottom_toBottomOf="@+id/iv_vendor_logo"
-                />
+                        app:layout_constraintStart_toStartOf="@+id/tv_vendor_name"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_vendor_name" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <Button
+                <EditText
+                    android:id="@+id/et_money"
+                    style="@style/InputTextField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:drawableEnd="@drawable/email"
+                    android:hint="@string/amount_of_money_to_be_transfared"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/layout_vendor_data" />
+
+
+                <EditText
+                    android:id="@+id/et_pin"
+                    style="@style/InputTextField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:drawableEnd="@drawable/email"
+                    android:hint="@string/pin_code"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/et_money" />
+
+                <Button
                     android:id="@+id/btn_purchase"
-                    android:background="@drawable/btn_background"
                     style="@style/primary_btn_style"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:elevation="5dp"
-                    android:text="@string/purchase"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
+                    android:background="@drawable/btn_background"
+                    android:elevation="5dp"
+                    android:text="@string/transfer"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/layout_vendor_data"
-                    android:layout_marginTop="32dp"
-            />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/et_pin" />
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
 
 
