--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/nav_wallet"
             android:icon="@drawable/ic_wallet"
-            android:title="@string/qr_scanner" />
+            android:title="@string/my_wallet" />
 
         <item
             android:id="@+id/nav_qr_scanner"
